--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "font-awesome": "^4.7.0",
     "fontawesome": "^4.7.2",
     "jquery": "^3.3.1",
+    "multer": "^1.4.1",
     "mysql": "^2.15.0",
     "tether": "^1.4.4"
   }
