--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jquery": "^3.3.1",
     "multer": "^1.4.1",
     "mysql": "^2.15.0",
+    "sweetalert": "^2.1.2",
     "tether": "^1.4.4"
   }
 }
